[package]
name = "vault-zapper"
version = "0.1.0"
authors = ["Sturdy <sturdy@apollo.farm>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# use library feature to disable all instantiate/execute/query exports
library = []
osmosis = ["cw-dex/osmosis"]
astroport = ["cw-dex/astroport"]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.11
"""
optimize-arm64 = """docker run --rm -v "$(pwd)":/code \
--mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
--mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
cosmwasm/rust-optimizer-arm64:0.12.11
"""

[dependencies]
apollo-utils = "0.1.1"
cosmwasm-schema = "1.2.1"
cosmwasm-std = {version = "1.2.1", features = ["stargate"]}
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
schemars = "0.8.11"
serde = {version = "1.0.152", default-features = false, features = ["derive"]}
thiserror = { version = "1.0.31" }
cw-vault-standard = { version = "0.2.0", features = ["lockup"] }
cw-dex-router = { version = "0.1.0", features = ["library"] }
apollo-cw-asset = "0.1.0"
cw-dex = "0.1.1"

[dev-dependencies]
osmosis-test-tube = { git = "https://github.com/apollodao/test-tube.git", rev = "d2245dfed56329d8c2e84d109a5a01f29d0db0e8" }
cw-it = { git = "https://github.com/apollodao/cw-it", rev = "59299395d74480f0a419ccafe4eeba95323fcb86", features = ["osmosis"] }
# cw-it = { path = "../cw-it", features = ["osmosis"] }
test-case = "3.0.0"
cw-dex = { version = "0.1.1", features = ["osmosis"] }
liquidity-helper = "0.1.0"
proptest = "1.1.0"
proptest-derive = "0.3.0"
cw20 = "1.0.1"
cw20-base = {version = "1.0.1", features = ["library"]}
osmosis-vault-test-helpers = { path = "../osmosis-vault/packages/test-helpers" }
