[package]
name    = "vault-zapper"
version = "0.1.0-rc.1"
authors = ["Sturdy <sturdy@apollo.farm>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = ["astroport"]
# use library feature to disable all instantiate/execute/query exports
library = []
osmosis = ["cw-dex/osmosis"]
astroport = ["cw-dex/astroport"]
osmosis-test-tube = ["cw-it/osmosis-test-tube", "locked-astroport-vault-test-helpers/osmosis-test-tube"]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.11
"""
optimize-arm64 = """docker run --rm -v "$(pwd)":/code \
--mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
--mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
cosmwasm/rust-optimizer-arm64:0.12.11
"""

[dependencies]
apollo-utils                        = "0.1.1"
cosmwasm-schema                     = "1.4.0"
cosmwasm-std                        = "1.4.0"
cw-storage-plus                     = "1.1.0"
cw2                                 = "1.1.0"
cw20                                = "1.1.0"
thiserror                           = { version = "1.0.48" }
cw-vault-standard                   = { version = "0.3.3-rc.1", features = ["lockup"] }
cw-dex-router                       = { version = "0.1.0", features = ["library"] }
apollo-cw-asset                     = "0.1.2"
cw-dex                              = "0.4.0-rc.2"
liquidity-helper                    = "0.1.0"

[dev-dependencies]
cw-it                               = { version = "0.2.0-rc.4", features = ["astroport-multi-test"] }
cw-vault-standard-test-helpers      = "0.3.3-rc.4"
locked-astroport-vault-test-helpers = "0.1.0-rc.4"
locked-astroport-vault              = "0.1.0-rc.2"
astroport-liquidity-helper          = "0.2.0"
test-case                           = "3.1.0"
cw-utils                            = "1.0.1"
